applied oop design

--- a/writer.html
+++ b/writer.html
@@ -19,6 +19,6 @@
     <button id="backButton">Back to Index</button>
 
     <!-- Include the external JavaScript file at the end of the body -->
-    <script src="writer.js"></script>
+    <script type="module" src="writer.js"></script>
 </body>
 </html>
